# apps/api/openapi.yaml
@@ -1116,6 +1116,17 @@ paths:
       responses:
         '200':
           description: Default Response
+  /v1/bookings/{id}/refund-preview:
+    get:
+      parameters:
+        - schema:
+            type: string
+          in: path
+          name: id
+          required: true
+      responses:
+        '200':
+          description: Default Response
   /v1/admin/payments/{paymentId}/refund:
     post:
       parameters:
